--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ p{
     padding-left: 25px;
     padding-right: 25px;
     padding-top: 25px;
+    padding-bottom: 25px;
 }
 .card-img-top{
     align-content: center;
@@ -140,5 +141,12 @@ p{
 }
 
 
+.breadcrumb{
+    background: none;
+    padding-left: 25px;
+}
 
-
+.breadcrumb-item{
+    font-size: 18px;
+    color: #6C63FF;
+}
