--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .navbar-brand {
-    font-family: "Roboto Light", serif;
+    font-family: "fantasy", serif;
 }
 .nav-link{
     font-family: "Roboto Light", serif;
@@ -66,6 +66,7 @@ h2 {
 }
 
 h3 {
+    font-family: "Roboto Light", serif;
     font-size: 28px;
     line-height: 46px;
     margin-top: 37px;
@@ -117,7 +118,7 @@ p{
 }
 
 .card {
-    margin-top: 100px;
+    margin-top: 50px;
     border: none;
     background-color: whitesmoke;
 }
